Fix z-index do topo

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     position: fixed;
     top: 0;
+    z-index: 10;
 }
 
 .topo div {
